change topbar colour

--- a/css/topbar.css
+++ b/css/topbar.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	height: 54px;
 	margin: 0;
-	background: #03C9A9;
+	background: #e74c3c;
 	text-align: center; /* center tabs */
 }
 
